probe and point in phantom

--- a/Base/Base.ui
+++ b/Base/Base.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1002</width>
-    <height>883</height>
+    <width>973</width>
+    <height>950</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>973</width>
+    <height>950</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>973</width>
+    <height>950</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -16,11 +28,23 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>10</y>
-     <width>911</width>
+     <x>11</x>
+     <y>11</y>
+     <width>950</width>
      <height>80</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>950</width>
+     <height>80</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>950</width>
+     <height>80</height>
+    </size>
    </property>
    <property name="title">
     <string/>
@@ -157,11 +181,23 @@
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>110</y>
-     <width>911</width>
+     <x>11</x>
+     <y>98</y>
+     <width>950</width>
      <height>101</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>950</width>
+     <height>101</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>950</width>
+     <height>101</height>
+    </size>
    </property>
    <property name="title">
     <string/>
@@ -271,14 +307,60 @@
     </property>
    </widget>
   </widget>
+  <widget class="QFrame" name="frame">
+   <property name="geometry">
+    <rect>
+     <x>11</x>
+     <y>206</y>
+     <width>950</width>
+     <height>703</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>950</width>
+     <height>650</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>950</width>
+     <height>10000000</height>
+    </size>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+  </widget>
   <widget class="QProgressBar" name="progressBar">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>830</y>
+     <x>11</x>
+     <y>916</y>
      <width>951</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>951</width>
+     <height>23</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>951</width>
+     <height>23</height>
+    </size>
    </property>
    <property name="value">
     <number>24</number>
@@ -291,22 +373,6 @@
    </property>
    <property name="format">
     <string>%p%</string>
-   </property>
-  </widget>
-  <widget class="QFrame" name="frame">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>250</y>
-     <width>911</width>
-     <height>541</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
    </property>
   </widget>
  </widget>
